# aeon-engine

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CHANGELOG.md  CMakeGraphVizOptions.cmake  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  Makefile  README.md  bootstrap.cmd  bootstrap.sh  bootstrap_clang.cmd  bootstrap_ios.sh  bootstrap_makefile.sh  bootstrap_pi.sh  bootstrap_sdl.cmd  bootstrap_vs2017.cmd  bootstrap_vs2017_sdl.cmd  bootstrap_win32.cmd  bootstrap_xcode.sh  clang_format.sh  cppcheck_config.cppcheck  dependencies.cmd  dependencies.txt  deploy.cmd  deploy.sh  deploy_incremental.cmd  graphviz_deps.cmd
aeon_engine/: CMakeLists.txt
aeon_engine/src/: application.cpp  application.h  baseplatform.h  buffer.cpp  buffer.h  buildconfig.h  configfile.cpp  configfile.h  console.cpp  console.h  consolelistener.h  filestream.h  framelistener.h  game.cpp  game.h  gamestate.h  gamestate_game.cpp  gamestate_game.h  glfwplatform.cpp  glfwplatform.h  image.cpp  image.h  imagecodec.h  imagecodecmanager.cpp  imagecodecmanager.h  imagecodecpng.cpp  imagecodecpng.h  iostream.cpp  iostream.h  main.cpp  material.cpp  material.h  materialmanager.cpp  materialmanager.h  mesh.cpp  mesh.h  meshmanager.cpp  meshmanager.h  resource.cpp  resource.h  (+31 more)
dep/: CMakeLists.txt
doxygen/: CMakeLists.txt  doxygen.in
editor/: CMakeLists.txt
editor/application/: CMakeLists.txt  application.cpp  application.h  editor_gl_device.cpp  editor_gl_device.h  editor_view.cpp  editor_view.h  frm_mainwindow_view.cpp  frm_mainwindow_view.h  main.cpp  platform_interface.cpp  platform_interface.h
editor/core/: editor_gl_device.cpp  editor_gl_device.h
editor/editor_widgets/: CMakeLists.txt
editor/resource_browser/: resource_browser_view.cpp  resource_browser_view.h
editor/resources/: style.qss
editor/ui/: editorview.ui  frm_mainwindow.ui  resource_browser.ui
editor/widgets/: editor_view.cpp  editor_view.h
engine/: CMakeLists.txt  build_config.h.in  buildconfig.h
engine/application/: CMakeLists.txt  aeon_application.cpp  aeon_application.h  application_settings.h  base_application.cpp  base_application.h  desktop_application.h  gfx_types.h  platform_types.h
engine/assets/: CMakeLists.txt  asset_manager.cpp  asset_manager.h
engine/audio/: audio.h  audio_buffer.h  audio_buffer_static.cpp  audio_buffer_static.h  audio_buffer_streaming.cpp  audio_buffer_streaming.h  audio_debug.cpp  audio_device.cpp  audio_device.h  audio_listener.cpp  audio_listener.h  audio_sample_buffer.cpp  audio_sample_buffer.h  audio_sample_format.cpp  audio_sample_format.h  audio_source.cpp  audio_source.h  audio_source_manager.cpp  audio_source_manager.h  buffer.cpp  buffer.h  buffer_interface.h  buffer_static.cpp  buffer_static.h  buffer_streaming.cpp  buffer_streaming.h  debug.cpp  device.cpp  device.h  listener.cpp  sample.cpp  sample.h  sample_buffer.cpp  sample_buffer.h  sample_format.cpp  source.cpp  source.h  source_manager.cpp  source_manager.h
engine/codecs/: CMakeLists.txt
engine/common/: CMakeLists.txt  buffer.h  cached_object.h  check_gl_error.cpp  check_gl_error.h  exception.h  has_z_order.h  logger.cpp  logger.h  object_cache.h
engine/console/: console.cpp  console.h  consolelistener.h
engine/data/: CMakeLists.txt  atlas.cpp  atlas.h  image.cpp  image.h  material.cpp  material.h  mesh.h  shader.cpp  shader.h
engine/gfx/: CMakeLists.txt  gfx_atlas.cpp  gfx_atlas.h  gfx_atlas_manager.cpp  gfx_atlas_manager.h  gfx_buffer.cpp  gfx_buffer.h  gfx_buffer_manager.cpp  gfx_buffer_manager.h  gfx_camera.cpp  gfx_device.cpp  gfx_device.h  gfx_exception.h  gfx_frame_listener.h  gfx_material.cpp  gfx_material.h  gfx_material_manager.cpp  gfx_material_manager.h  gfx_mesh.h  gfx_monitor.h  gfx_render_target.cpp  gfx_render_target.h  gfx_resource_manager.h  gfx_shader.cpp  gfx_shader.h  gfx_shader_manager.cpp  gfx_shader_manager.h  gfx_sprite_batch.cpp  gfx_sprite_batch.h  gfx_texture.cpp  gfx_texture.h  gfx_texture_manager.cpp  gfx_texture_manager.h  gfx_viewport.cpp  gfx_viewport.h  gfx_window.h
engine/input/: CMakeLists.txt
engine/io/: CMakeLists.txt
engine/mono/: CMakeLists.txt
engine/platform/: CMakeLists.txt  platform_exception.h  platform_file_interface.h  platform_file_open_mode.h  platform_filesystem_interface.h  platform_input_handler.cpp  platform_input_handler.h  platform_input_listener.h  platform_interface.h  platform_keyboard_keys.h  platform_monitor.h  platform_mouse_buttons.h  platform_window.h  platform_window_settings.h
engine/resources/: CMakeLists.txt  atlas.cpp  atlas.h  exceptions.h  font.cpp  font.h  image.cpp  image.h  material.cpp  material.h  mesh.cpp  mesh.h  mesh_node.cpp  mesh_node.h  resource.h  resource_encoding.h  resource_manager.cpp  resource_manager.h  resource_type.h  shader.cpp  shader.h  submesh.cpp  submesh.h
engine/scene/: CMakeLists.txt  animated_sprite.cpp  animated_sprite.h  camera.cpp  camera.h  exceptions.h  mesh.cpp  mesh.h  orthographic_camera.cpp  orthographic_camera.h  perspective_camera.cpp  perspective_camera.h  render_layer.h  render_object.h  render_queue.cpp  render_queue.h  scene_layer.cpp  scene_layer.h  scene_manager.cpp  scene_manager.h  scene_node.cpp  scene_node.h  scene_object.cpp  scene_object.h  sprite.cpp  sprite.h  (+6 more)
game/: CMakeLists.txt
libaeon/: CMakeLists.txt
src/: .AeonBaseApplication.cpp.swp  AeonBaseApplication.cpp  AeonBuffer.cpp  AeonConfigFile.cpp  AeonConsole.cpp  AeonConsoleStdOutListener.cpp  AeonConsoleStreamListener.cpp  AeonDataStream.cpp  AeonFileInput.cpp  AeonFileOutput.cpp  AeonFileStream.cpp  AeonGLFWApplication.cpp  AeonGame.cpp  AeonIOStream.cpp  AeonImage.cpp  AeonImageCodecManager.cpp  AeonImageCodecPNG.cpp  AeonImageLoader_png.cpp  AeonMemoryStream.cpp  AeonResource.cpp  AeonResourceManager.cpp  AeonStream.cpp  AeonStringUtils.cpp  AeonTexture.cpp  AeonTextureManager.cpp  BaseApplication.cpp  CMakeLists.txt  ConfigFile.cpp  GLFWApplication.cpp  Game.cpp  Root.cpp  application.cpp  application.h  baseplatform.h  buffer.cpp  buffer.h  buildconfig.h  configfile.cpp  configfile.h  console.cpp  (+74 more)
(+1193 files in other folders)
