message(STATUS "+------------------------------------------------------------------------------+")
message(STATUS "| Google Test                                                                  |")
message(STATUS "+------------------------------------------------------------------------------+")
add_subdirectory(googletest)

message(STATUS "+------------------------------------------------------------------------------+")
message(STATUS "| Zlib                                                                         |")
message(STATUS "+------------------------------------------------------------------------------+")
add_subdirectory(zlib)

message(STATUS "+------------------------------------------------------------------------------+")
message(STATUS "| PNG                                                                          |")
message(STATUS "+------------------------------------------------------------------------------+")
add_subdirectory(png)

if (AEON_AUDIO_USE_OPENAL)
    message(STATUS "+------------------------------------------------------------------------------+")
    message(STATUS "| OpenAL Soft                                                                  |")
    message(STATUS "+------------------------------------------------------------------------------+")
    add_subdirectory(openal_soft)

    message(STATUS "+------------------------------------------------------------------------------+")
    message(STATUS "| OGG                                                                          |")
    message(STATUS "+------------------------------------------------------------------------------+")
    add_subdirectory(libogg)

    message(STATUS "+------------------------------------------------------------------------------+")
    message(STATUS "| Vorbis                                                                       |")
    message(STATUS "+------------------------------------------------------------------------------+")
    add_subdirectory(libvorbis)
endif ()

if (AEON_GFX_GL)
    message(STATUS "+------------------------------------------------------------------------------+")
    message(STATUS "| GLEW                                                                         |")
    message(STATUS "+------------------------------------------------------------------------------+")
    add_subdirectory(glew)
endif ()

if (AEON_PLATFORM_GLFW)
    message(STATUS "+------------------------------------------------------------------------------+")
    message(STATUS "| GLFW                                                                         |")
    message(STATUS "+------------------------------------------------------------------------------+")
    add_subdirectory(glfw)
endif ()

message(STATUS "+------------------------------------------------------------------------------+")
message(STATUS "| GLM                                                                          |")
message(STATUS "+------------------------------------------------------------------------------+")
add_subdirectory(glm)

message(STATUS "+------------------------------------------------------------------------------+")
message(STATUS "| Freetype2                                                                    |")
message(STATUS "+------------------------------------------------------------------------------+")
add_subdirectory(freetype2)

message(STATUS "+------------------------------------------------------------------------------+")
message(STATUS "| Open Asset Import Library                                                    |")
message(STATUS "+------------------------------------------------------------------------------+")
add_subdirectory(assimp)

message(STATUS "+------------------------------------------------------------------------------+")
message(STATUS "| std::asio                                                                    |")
message(STATUS "+------------------------------------------------------------------------------+")
add_subdirectory(std_asio)

message(STATUS "+------------------------------------------------------------------------------+")
message(STATUS "| imgui                                                                        |")
message(STATUS "+------------------------------------------------------------------------------+")
add_subdirectory(imgui)

message(STATUS "+------------------------------------------------------------------------------+")
message(STATUS "| Aeon                                                                         |")
message(STATUS "+------------------------------------------------------------------------------+")
add_subdirectory(libaeon)

message(STATUS "+------------------------------------------------------------------------------+")
message(STATUS "| Finished submodules                                                          |")
message(STATUS "+------------------------------------------------------------------------------+")
