# Distributed under the BSD 2-Clause License - Copyright 2012-2019 Robin Degen

message(STATUS "+------------------------------------------------------------------------------+")
message(STATUS "| Aeon                                                                         |")
message(STATUS "+------------------------------------------------------------------------------+")
add_subdirectory(libaeon/src)
